--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm build
+      - run: chmod +x deploy.sh
+      - run: ./deploy.sh
 
 workflows:
   version: 2.1
