--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,20 @@ jobs:
       - run: npm build
       - run: chmod +x deploy.sh
       - run: ./deploy.sh
+  production:
+    docker:
+      - image: circleci/node:14.16
+    steps:
+      - checkout
+      - run: chmod +x deploy.sh
+      - run: ./deploy.sh
 
 workflows:
   version: 2.1
   prueba:
     jobs:
       - prueba-uno
+      - production:
+         filters:
+          branches:
+           only: prod
